--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,18 @@
-# canvas==0.3
+bson==0.5.10
+cachetools==5.3.2
+canvas==0.3
 certifi==2022.9.24
 charset-normalizer==2.1.1
 click==8.1.3
+contourpy==1.2.0
+cycler==0.12.1
+dnspython==2.4.2
 Flask==2.2.2
+Flask-Cors==4.0.0
 Flask-SQLAlchemy==3.0.2
-idna==3.4
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.1
-requests==2.28.1
-SQLAlchemy==1.4.42
-urllib3==1.26.12
-Werkzeug==2.2.2
-gunicorn==21.2.0
-beautifulsoup4==4.12.2
+fonttools==4.47.0
+fpdf==1.7.2
+Frozen-Flask==1.0.1
 google==3.0.0
 google-api-core==2.14.0
 google-api-python-client==2.108.0
@@ -21,12 +20,35 @@ google-auth==2.23.4
 google-auth-httplib2==0.1.1
 google-auth-oauthlib==1.1.0
 googleapis-common-protos==1.61.0
-httplib2==0.22.0
-oauthlib==3.2.2
-pytz==2023.3.post1
-Frozen-Flask==1.0.1
-Flask-Cors==4.0.0
 gunicorn==21.2.0
+httplib2==0.22.0
+idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+kiwisolver==1.4.5
+MarkupSafe==2.1.1
 matplotlib==3.8.2
+numpy==1.26.3
+oauthlib==3.2.2
+packaging==23.2
+pillow==10.2.0
+protobuf==4.25.1
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
+pykerberos==1.2.4
 pymongo==4.6.1
-bson==0.5.10
+pyparsing==3.1.1
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+pytz==2023.3.post1
+requests==2.28.1
+requests-oauthlib==1.3.1
+rsa==4.9
+six==1.16.0
+soupsieve==2.5
+SQLAlchemy==1.4.42
+uritemplate==4.1.1
+urllib3==1.26.12
+websocket-client==1.6.4
+websockets==11.0.3
+Werkzeug==2.2.2
