--- a/requirements.txt
+++ b/requirements.txt
@@ -16,8 +16,8 @@ httplib2==0.22.0
 Jinja2==3.1.2
 kiwisolver==1.4.5
 MarkupSafe==2.1.1
-matplotlib==3.8.2
-numpy==1.26.3
+matplotlib
+numpy
 oauthlib==3.2.2
 packaging==23.2
 pymongo==4.6.1
@@ -35,3 +35,4 @@ websocket-client==1.6.4
 websockets==11.0.3
 Werkzeug==2.2.2
 bcrypt==4.1.2
+psycopg2-binary
