--- a/services/backend/requirements.txt
+++ b/services/backend/requirements.txt
@@ -18,6 +18,8 @@ kiwisolver==1.4.5
 MarkupSafe==2.1.1
 matplotlib
 numpy
+email_automater
+datetime
 oauthlib==3.2.2
 packaging==23.2
 pymongo==4.6.1
