--- a/services/backend/requirements.txt
+++ b/services/backend/requirements.txt
@@ -18,6 +18,7 @@ kiwisolver==1.4.5
 MarkupSafe==2.1.1
 matplotlib
 numpy
+
 datetime
 oauthlib==3.2.2
 packaging==23.2
@@ -39,3 +40,4 @@ bcrypt==4.1.2
 psycopg2-binary
 argparse
 python-dotenv
+sqlalchemy-json
